--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
             android:label="@string/app_name"
             android:theme="@style/Theme.MyTrainingSchedules.NoActionBar"></activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.mainactivity.MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/Theme.MyTrainingSchedules.NoActionBar"></activity>
         <activity
