--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,19 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.mytrainingschedules">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyTrainingSchedules"
-        android:usesCleartextTraffic="true">
-
-        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
-
+        android:theme="@style/Theme.MyTrainingSchedules">
         <activity
             android:name=".activities.appintro.SplashActivity"
             android:label="@string/app_name"
@@ -41,7 +35,10 @@
             android:name=".activities.mainactivity.MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/Theme.MyTrainingSchedules.NoActionBar"></activity>
-
+        <activity
+            android:name=".activities.apphome.HomeActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar"></activity>
     </application>
 
 </manifest>
