--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:theme="@style/Theme.MyTrainingSchedules"
         android:usesCleartextTraffic="true">
 
-        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
+        <uses-library
+            android:name="org.apache.http.legacy"
+            android:required="false" />
 
         <activity
             android:name=".activities.appintro.SplashActivity"
@@ -28,20 +30,23 @@
         <activity
             android:name=".activities.appintro.IntroActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar"></activity>
+            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar" />
         <activity
             android:name=".activities.applogin.LoginActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar"></activity>
+            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar" />
         <activity
             android:name=".activities.applogin.RegisterActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar"></activity>
+            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar" />
         <activity
             android:name=".activities.mainactivity.MainActivity"
             android:label="@string/title_activity_main"
-            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar"></activity>
-
+            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar" />
+        <activity
+            android:name=".activities.mainactivity.home.ViewSchedule"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar" />
     </application>
 
 </manifest>
