--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,10 @@
             android:name=".activities.mainactivity.home.ViewSchedule"
             android:label="@string/app_name"
             android:theme="@style/Theme.MyTrainingSchedules.NoActionBar" />
+        <activity
+            android:name=".activities.mainactivity.user.UserPageActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar" />
     </application>
 
 </manifest>
