--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyTrainingSchedules"
-        android:usesCleartextTraffic="true">
+        android:usesCleartextTraffic="true"><activity android:name=".activities.schedules.PopActivity"
+        android:theme="@style/AppTheme.PopEx"></activity>
+
+        <activity android:name=".activities.schedules.CreateScheduleActivity"></activity>
 
         <uses-library
             android:name="org.apache.http.legacy"
