--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,16 @@
         android:theme="@style/Theme.MyTrainingSchedules"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".activities.schedules.CompleteScheduleActivity"
+            android:label="@string/title_activity_complete_schedule"
+            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar"></activity>
+        <activity
             android:name=".activities.schedules.PopActivity"
             android:theme="@style/AppTheme.PopEx" />
-        <activity android:name=".activities.schedules.CreateScheduleActivity" />
+        <activity
+            android:name=".activities.schedules.CreateScheduleActivity"
+            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar"
+            android:windowSoftInputMode="adjustNothing"/>
 
         <uses-library
             android:name="org.apache.http.legacy"
