--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -78,6 +78,10 @@
             android:name=".activities.schedules.AddExerciseActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.MyTrainingSchedules.NoActionBar" />
+        <activity
+            android:name=".activities.schedules.SetExerciseDataActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar" />
     </application>
 
 </manifest>
