--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.mcxiaoke.volley:library:1.0.19'
     implementation 'com.google.android.material:material:1.2.0-alpha03'
+    implementation 'org.apache.commons:commons-lang3:3.6'
 
 }
