--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,7 +53,8 @@
         <activity
             android:name=".activities.mainactivity.MainActivity"
             android:label="@string/title_activity_main"
-            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar" />
+            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar"
+            android:windowSoftInputMode="adjustNothing" />
         <activity
             android:name=".activities.mainactivity.home.ViewSchedule"
             android:label="@string/app_name"
