--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,8 @@ android {
 
 dependencies {
 
+    compile 'commons-codec:commons-codec:1.15'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.6'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
