--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,20 +20,6 @@
         <activity
             android:name=".activities.schedules.EditExerciseActivity"
             android:theme="@style/Theme.MyTrainingSchedules.NoActionBar" />
-        <activity
-            android:name=".activities.schedules.PopActivity2"
-            android:theme="@style/AppTheme.PopEx" />
-        <activity
-            android:name=".activities.schedules.CompleteScheduleActivity"
-            android:label="@string/title_activity_complete_schedule"
-            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar" />
-        <activity
-            android:name=".activities.schedules.PopActivity"
-            android:theme="@style/AppTheme.PopEx" />
-        <activity
-            android:name=".activities.schedules.CreateScheduleActivityOld"
-            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar"
-            android:windowSoftInputMode="adjustNothing" />
 
         <uses-library
             android:name="org.apache.http.legacy"
@@ -67,7 +53,7 @@
             android:theme="@style/Theme.MyTrainingSchedules.NoActionBar"
             android:windowSoftInputMode="adjustNothing" />
         <activity
-            android:name=".activities.mainactivity.home.ViewSchedule"
+            android:name=".activities.mainactivity.home.ViewScheduleActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.MyTrainingSchedules.NoActionBar" />
         <activity
@@ -76,10 +62,6 @@
             android:theme="@style/Theme.MyTrainingSchedules.NoActionBar" />
         <activity
             android:name=".activities.mainactivity.user.UserPageActivity"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar" />
-        <activity
-            android:name=".activities.mainactivity.home.AddExerciseActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.MyTrainingSchedules.NoActionBar" />
         <activity
@@ -92,10 +74,6 @@
             android:theme="@style/Theme.MyTrainingSchedules.NoActionBar" />
         <activity
             android:name=".activities.schedules.AddExerciseActivity"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar" />
-        <activity
-            android:name=".activities.schedules.SetExerciseDataActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.MyTrainingSchedules.NoActionBar" />
     </application>
