--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/default_image"
+        android:icon="@mipmap/default_account_image"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/default_account_image_round"
         android:supportsRtl="true"
