--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
     compile 'commons-codec:commons-codec:1.15'
     implementation group: 'commons-io', name: 'commons-io', version: '2.6'
     implementation 'androidx.appcompat:appcompat:1.2.0'
