--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,6 +69,10 @@
             android:label="@string/app_name"
             android:theme="@style/Theme.MyTrainingSchedules.NoActionBar" />
         <activity
+            android:name=".activities.mainactivity.user.UserPageActivity2"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar" />
+        <activity
             android:name=".activities.workout.RunningWorkoutActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.MyTrainingSchedules.NoActionBar" />
