--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,16 +14,20 @@
         android:usesCleartextTraffic="true">
         <activity
             android:name=".activities.schedules.CreateExerciseActivity"
-            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar" />
+            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.schedules.SetScheduleDataActivity"
-            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar" />
+            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.schedules.CreateScheduleActivity"
-            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar" />
+            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.schedules.EditExerciseActivity"
-            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar" />
+            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar"
+            android:screenOrientation="portrait" />
 
         <uses-library
             android:name="org.apache.http.legacy"
@@ -32,7 +36,8 @@
         <activity
             android:name=".activities.appintro.SplashActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar">
+            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -42,48 +47,59 @@
         <activity
             android:name=".activities.appintro.IntroActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar" />
+            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.applogin.LoginActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar" />
+            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.applogin.RegisterActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar" />
+            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.mainactivity.MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/Theme.MyTrainingSchedules.NoActionBar"
-            android:windowSoftInputMode="adjustNothing" />
+            android:windowSoftInputMode="adjustNothing"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.mainactivity.home.ViewScheduleActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar" />
+            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.mainactivity.search.DownloadScheduleActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar" />
+            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.mainactivity.user.UserPageActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar" />
+            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.mainactivity.user.UserPageActivity2"
             android:label="@string/app_name"
-            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar" />
+            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.workout.RunningWorkoutActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar" />
+            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.schedules.EditScheduleActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar" />
+            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.schedules.AddExerciseActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar" />
+            android:theme="@style/Theme.MyTrainingSchedules.NoActionBar"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
